# OpenRouter-Model-x-Provider-Eval-Tool

./: .env.example  .gitignore  README.md  docker-compose.yml
benchmark-service/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  benchmark_cli.py  inspect_runner.py  main.py  pyproject.toml  requirements.txt  start.sh
dashboard/: .env.example  COMPARISON_VS_OPENBENCH.md  Dockerfile  Dockerfile.dev  drizzle.config.ts  jest.config.js  jest.setup.ts  next.config.ts  package-lock.json  package.json
dashboard/__tests__/lib/: api.test.ts  eval-storage.test.ts
dashboard/public/data/: openrouter_models_list.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/benchmarks/: page.tsx
dashboard/src/app/matrix/: page.tsx
dashboard/src/app/models/: page.tsx
dashboard/src/app/providers/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: CapabilityOverrideModal.tsx  CustomWatchlist.tsx  ErrorBoundary.tsx  EvalProgress.tsx  EvalSpotlight.tsx  MultiProviderEval.tsx  Sidebar.tsx
dashboard/src/db/: client.ts
dashboard/src/hooks/: useAlerts.ts  useBenchmarks.ts  useDashboard.ts  useModels.ts  useProviders.ts
dashboard/src/lib/: api-types.ts  api.ts  benchmark-config.ts  benchmark-datasets.ts  capability-overrides.ts  eval-service-client.ts  eval-storage.ts  export-utils.ts  fetch-utils.ts
database/migrations/: 001_init.sql
provider-eval/: .env.example  .gitignore  package-lock.json  package.json
provider-eval/src/: cli.ts  eval-runner.ts  index.ts  openrouter.ts  types.ts
(+15 files in other folders)
