[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-service"
version = "2.0.0"
description = "LLM Benchmark API & CLI - Better than OpenBench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "inspect-ai>=0.3.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.0",
    "anyio>=4.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
benchmarks = [
    "inspect-evals",  # Pre-built benchmark tasks (117+)
]

[project.scripts]
bench = "benchmark_cli:main"
benchmark-server = "main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["."]
